--- a/css/services.css
+++ b/css/services.css
@@ -389,7 +389,7 @@ body {
   overflow: hidden;
   position: relative;
   margin-top: -100px;
-  background-image: url('images/builderimages/image3.jpg');
+  background-image: url('../images/builderimages/image3.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
